# openwhoop-app

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-ios.yml
scripts/: android-install-apk.sh  android-uninstall-package.sh  build-android-apks.sh  generate-android-keystore.sh  tauri-android-dev.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  handlers.rs  internals.rs  lib.rs  main.rs  state.rs
src-tauri/src/handlers/: activity.rs  ble_permissions.rs  daily_info.rs  database.rs  hr_stream.rs  latest_reading.rs  log.rs  runtime.rs  scan.rs  selection.rs  stress_stream.rs  sync.rs  whoop_manager.rs
src/lib/api/: index.ts  interfaces.ts
src/lib/screens/: AddActivityScreen.svelte  DeviceManagementScreen.svelte  HealthMonitorScreen.svelte  HealthPageScreen.svelte  HomePage.css  HomePage.svelte  MoreScreen.svelte  ScanForDevices.svelte  SelectedWhoopScreen.css  SelectedWhoopScreen.svelte  StartActivityScreen.svelte  StressMonitorScreen.svelte
src/lib/stores/: appStore.ts  deviceManagement.ts  healthMonitor.ts  healthPage.ts  homePage.ts  monitorChart.ts  pagePermissions.ts  scanForDevices.ts  selectedWhoop.ts  selectedWhoopScreen.ts  stressMonitor.ts
src/lib/utils/: logging.ts
src/routes/: +page.svelte  page.css
